// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer Edit Panel should be able to generate a new peering 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -35,13 +35,14 @@
        </h4>
        <div
          class=\\"rs-drawer-actions\\"
        >
          <button
-           aria-disabled=\\"false\\"
-           class=\\"rs-btn rs-btn-primary\\"
+           aria-disabled=\\"true\\"
+           class=\\"rs-btn rs-btn-primary rs-btn-disabled\\"
            data-testid=\\"saveButton\\"
+           disabled=\\"\\"
            type=\\"submit\\"
          >
            peerList.panels.create
            <span
              class=\\"rs-ripple-pond\\"
@@ -95,11 +96,11 @@
                  aria-labelledby=\\"name-control-label\\"
                  class=\\"rs-input\\"
                  id=\\"name\\"
                  name=\\"name\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"something peer name\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -120,11 +121,11 @@
                  aria-labelledby=\\"url-control-label\\"
                  class=\\"rs-input\\"
                  id=\\"url\\"
                  name=\\"url\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"https://host-url.ch/\\"
                />
              </div>
            </div>
            <div
              class=\\"rs-form-group\\"
@@ -145,11 +146,11 @@
                  aria-labelledby=\\"token-control-label\\"
                  class=\\"rs-input\\"
                  id=\\"token\\"
                  name=\\"token\\"
                  type=\\"text\\"
-                 value=\\"\\"
+                 value=\\"abc123def456\\"
                />
              </div>
            </div>
            <button
              class=\\"fetchButton rs-btn rs-btn-primary\\""
`;

exports[`Peer Edit Panel should render 1`] = `
<DocumentFragment>
  <form
    class="rs-form rs-form-vertical rs-form-fluid"
    style="height: 100%;"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        peerList.panels.createPeer
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          peerList.panels.create
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          peerList.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-panel"
      >
        <div
          class="rs-panel-body"
          role="region"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="name"
              id="name-control-label"
            >
              peerList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="name-help-text"
                aria-labelledby="name-control-label"
                class="rs-input"
                id="name"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="url"
              id="url-control-label"
            >
              peerList.panels.URL*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="url-help-text"
                aria-labelledby="url-control-label"
                class="rs-input"
                id="url"
                name="url"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="token"
              id="token-control-label"
            >
              peerList.panels.token*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="token-help-text"
                aria-labelledby="token-control-label"
                class="rs-input"
                id="token"
                name="token"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="fetchButton rs-btn rs-btn-primary"
            type="button"
          >
            peerList.panels.getRemote
            <span
              class="rs-ripple-pond"
            >
              <span
                class="rs-ripple"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Peer Edit Panel should render with ID 1`] = `
<DocumentFragment>
  <form
    class="rs-form rs-form-vertical rs-form-fluid"
    style="height: 100%;"
  >
    <div
      class="rs-drawer-header"
    >
      <span
        aria-label="Close"
        class="rs-drawer-header-close rs-btn-close"
        role="button"
        title="Close"
      >
        <svg
          aria-hidden="true"
          aria-label="close"
          class="rs-icon"
          data-category="application"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.784 2.089l.069.058 5.146 5.147 5.146-5.147a.5.5 0 01.765.638l-.058.069L8.705 8l5.147 5.146a.5.5 0 01-.638.765l-.069-.058-5.146-5.147-5.146 5.147a.5.5 0 01-.765-.638l.058-.069L7.293 8 2.146 2.854a.5.5 0 01.638-.765z"
          />
        </svg>
      </span>
      <h4
        class="rs-drawer-title"
      >
        peerList.panels.editPeer
      </h4>
      <div
        class="rs-drawer-actions"
      >
        <button
          aria-disabled="false"
          class="rs-btn rs-btn-primary"
          data-testid="saveButton"
          type="submit"
        >
          peerList.panels.save
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
        <button
          class="rs-btn rs-btn-subtle"
          type="button"
        >
          peerList.panels.close
          <span
            class="rs-ripple-pond"
          >
            <span
              class="rs-ripple"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      class="rs-drawer-body"
    >
      <div
        class="rs-panel"
      >
        <div
          class="rs-panel-body"
          role="region"
        >
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="name"
              id="name-control-label"
            >
              peerList.panels.name*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="name-help-text"
                aria-labelledby="name-control-label"
                class="rs-input"
                id="name"
                name="name"
                type="text"
                value="Test Peer Name"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="url"
              id="url-control-label"
            >
              peerList.panels.URL*
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="url-help-text"
                aria-labelledby="url-control-label"
                class="rs-input"
                id="url"
                name="url"
                type="text"
                value="https://test-url.ch/"
              />
            </div>
          </div>
          <div
            class="rs-form-group"
            role="group"
          >
            <label
              class="rs-form-control-label"
              for="token"
              id="token-control-label"
            >
              peerList.panels.token
            </label>
            <div
              class="rs-form-control rs-form-control-wrapper"
            >
              <input
                aria-describedby="token-help-text"
                aria-labelledby="token-control-label"
                class="rs-input"
                id="token"
                name="token"
                placeholder="peerList.panels.leaveEmpty"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="fetchButton rs-btn rs-btn-primary"
            type="button"
          >
            peerList.panels.getRemote
            <span
              class="rs-ripple-pond"
            >
              <span
                class="rs-ripple"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
